--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <div class="card">
  
   <div class="card-header">
-    <h3>Chihuahua</h3>
+    <h3>Chow Chow</h3>
   </div>
   <div class="card-body">
     <h2 class="pricing-text">Free</h2>
@@ -166,7 +166,7 @@
 <div class="card">
     
   <div class="card-header">
-    <h3>Labrador</h3>
+    <h3>German shepherd</h3>
   </div>
   <div class="card-body">
     <h2 class="pricing-text">$49 / mo</h2>
